indoor spacing fix

--- a/client/indoor/indoor.css
+++ b/client/indoor/indoor.css
@@ -41,6 +41,7 @@ header {
 ul {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .picks {
